test/errors/mismatched_paren.sg
' Test mismatched parentheses
(:= test (foo bar]